<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContexRoubo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/corFundoDeBotoes"
    tools:context="seguranca.mas.planus.Fragments.FragmentoInformarRoubo">



        <LinearLayout
            android:id="@+id/layoutidentificacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta001"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta001" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRespostaNao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RespostaNao" />

                <Button
                    android:id="@+id/btnResposta001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/RespostaSim" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutquemsofreuoroubo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta002"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta002"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta002" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRespostaComercio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtSofreuORouboComercio" />

                <Button
                    android:id="@+id/btnSofreuORouboTerceiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtSofreuORouboTerceiro"
                    tools:text="@string/txtSofreuORouboTerceiro" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutmeiodeviolencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta003"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta003"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta003" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnArmaDeFogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipoDeViolencia01" />

                <Button
                    android:id="@+id/btnArmaBranca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipoDeViolencia02" />

                <Button
                    android:id="@+id/btnArmaNaoDemonstrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipoDeViolencia03"
                    tools:text="@string/txtTipoDeViolencia03" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTempoOcorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta004"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta004"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta004" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTempoAte10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTempoAte10Min" />

                <Button
                    android:id="@+id/btnTempoDe10a20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTempoDe10a20Min" />

                <Button
                    android:id="@+id/btnTempoDe20a30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTempoDe20a30Min"
                    tools:text="@string/txtTempoDe20a30Min" />

                <Button
                    android:id="@+id/btnTempoDe30a40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTempoDe30a40Min"
                    tools:text="@string/txtTempoDe30a40Min" />

                <Button
                    android:id="@+id/btnTempoDe40a60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTempoAcimaDe60Min"
                    tools:text="@string/txtTempoAcimaDe60Min" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutdefulga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta005"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta005"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta005" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFulgaAPe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipodeFuga01" />

                <Button
                    android:id="@+id/btnFulgaDeCarro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipodeFuga02" />

                <Button
                    android:id="@+id/btnFulgaMoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTipodeFuga03"
                    tools:text="@string/txtTipodeFuga03" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutdecaracteristicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPergunta006"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPergunta006"
                android:textAlignment="textStart"
                android:textColor="@color/corBalaoAmarelo"
                android:textSize="@dimen/FontePadrao"
                tools:text="@string/txtPergunta006" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCaracterisitcasSim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtCaracteristicaSim" />

                <Button
                    android:id="@+id/btnCaracteristicasNao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtCaracteristicaNao"
                    tools:text="@string/txtCaracteristicaNao" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>

